--- a/style.css
+++ b/style.css
@@ -763,6 +763,20 @@ label {
     width: 100%;
 }
 
+#wake-btn {
+   margin: 0 auto;
+    z-index: 2000;
+}
+
+
+
+#wake-btn.active i {
+   color: rgb(238, 166, 10);
+   padding: 0.2em;
+ 
+}
+
+
 /*------------------RESPONZIVNÍ DESIGN------------------*/
 @media (max-width: 768px) {
 
@@ -880,7 +894,7 @@ label {
     .right-page {
         width: 100%;
         margin: 0;
-        
+
     }
 
     .right-page img {
